# practice

design/: 名称未設定ファイル.drawio
html/: button.html  input_field.html  slder.html
html/page_transition/: a.html  b.html
javascript/: alert.js  index.html
line_API/: Level0.Bat  Level1.Bat  Level2.Bat  Level3.Bat  Level4.Bat  Level5.Bat
python/: 20241004.py  exe.bat  getresource.py  helloworld.py  httpaccess.py  readfile.py  webscraping.py  writefile.py
python/Class/: Calcurate.py  ClassSample.py
python/Class/game/: Creature.py  Main.py  Weapon.py
python/Django/: memo.txt
python/Django/databasepractice/: db.sqlite3
python/Django/databasepractice/commentapps/: apps.py  urls.py  views.py
python/Django/databasepractice/mysite/: settings.py  urls.py
python/Django/django-polls/: README.rst  pyproject.toml
python/Django/django-polls/django_polls/: models.py  views.py
python/Django/django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
python/Django/django-polls/django_polls/migrations/: 0001_initial.py
python/Django/django-polls/django_polls/templates/polls/: detail.html  index.html  results.html
python/Django/djangotutorial/: db.sqlite3
python/Django/djangotutorial/mysite/: settings.py  urls.py
python/Django/djangotutorial/polls/: admin.py  models.py  tests.py  urls.py  views.py
python/Django/practice/: db.sqlite3
python/Django/practice/csspractice/: apps.py  models.py  urls.py  views.py
python/output/: httpresponse.txt
ドキュメント/: 1_質問確認・TODOリスト.xlsx  【防災情報共有システム】ハードウェア構成イメージ_ver3.pptx  打ち合わせ資料（システム構成等について）.docx
(+21 files in other folders)
